modify Dockerfile & pom.xml